--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-30-04",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/server.ts",
   "scripts": {
     "serve": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
