--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,12 @@
     "target": "es5",                          
     "module": "commonjs",                    
     "lib": ["es6"],                     
-    "allowJs": true,
+    "allowJs": false,
     "outDir": "build",                          
     "rootDir": "src",
     "strict": true,         
     "noImplicitAny": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
   }
 }
